package dev.argon.plugin.jsapi.proto

import dev.argon.tube as t

import scala.scalajs.js
import scala.scalajs.js.annotation.JSImport

opaque type TubeFormatVersion <: js.Any = js.Any
@js.native
@JSImport("@argon-lang/plugin-util/proto/tube.js", "TubeFormatVersion")
object TubeFormatVersion extends TSProtoCodec[TubeFormatVersion]


opaque type Metadata <: js.Any = js.Any
@js.native
@JSImport("@argon-lang/plugin-util/proto/tube.js", "Metadata")
object Metadata extends TSProtoCodec[Metadata]


opaque type TubeName <: js.Any = js.Any
@js.native
@JSImport("@argon-lang/plugin-util/proto/tube.js", "TubeName")
object TubeName extends TSProtoCodec[TubeName]


opaque type ModulePath <: js.Any = js.Any
@js.native
@JSImport("@argon-lang/plugin-util/proto/tube.js", "ModulePath")
object ModulePath extends TSProtoCodec[ModulePath]


opaque type ModuleDefinition <: js.Any = js.Any
@js.native
@JSImport("@argon-lang/plugin-util/proto/tube.js", "ModuleDefinition")
object ModuleDefinition extends TSProtoCodec[ModuleDefinition]


opaque type ClassDefinition <: js.Any = js.Any
@js.native
@JSImport("@argon-lang/plugin-util/proto/tube.js", "ClassDefinition")
object ClassDefinition extends TSProtoCodec[ClassDefinition]


opaque type TraitDefinition <: js.Any = js.Any
@js.native
@JSImport("@argon-lang/plugin-util/proto/tube.js", "TraitDefinition")
object TraitDefinition extends TSProtoCodec[TraitDefinition]


opaque type FunctionDefinition <: js.Any = js.Any
@js.native
@JSImport("@argon-lang/plugin-util/proto/tube.js", "FunctionDefinition")
object FunctionDefinition extends TSProtoCodec[FunctionDefinition]


opaque type MethodDefinition <: js.Any = js.Any
@js.native
@JSImport("@argon-lang/plugin-util/proto/tube.js", "MethodDefinition")
object MethodDefinition extends TSProtoCodec[MethodDefinition]


opaque type ClassConstructorDefinition <: js.Any = js.Any
@js.native
@JSImport("@argon-lang/plugin-util/proto/tube.js", "ClassConstructorDefinition")
object ClassConstructorDefinition extends TSProtoCodec[ClassConstructorDefinition]




